--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rigenera-app",
   "productName": "Welcome Rigenera",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "Electron interactive API demos",
   "private": true,
   "main": "main.js",
@@ -12,10 +12,12 @@
     "package": "npm-run-all package:*",
     "package:mac": "electron-packager . --overwrite --platform=darwin --arch=x64 --out=out --icon=assets/app-icon/mac/app.icns --osx-sign.identity='Developer ID Application: GitHub' --extend-info=assets/mac/info.plist",
     "package:win": "electron-packager . --overwrite --platform=win32 --arch=ia32 --out=out --icon=assets/app-icon/win/app.ico",
-
     "package-linux": "electron-packager .  rigenera-app --overwrite --asar=true --platform=linux --arch=x64 --icon=assets/icons/png/1024x1024.png --prune=true --out=release-builds",
-    "package-linux": "electron-packager .  rigenera-app --overwrite --asar=true --platform=linux --arch=ia32 --icon=assets/icons/png/1024x1024.png --prune=true --out=release-builds",
-
+    "build64": "electron-packager . rigenera-app --overwrite --asar true --platform linux --arch x64 --icon assets/icons/png/1024x1024.png --prune true --out release-builds/",
+    "deb64": "electron-installer-debian --src release-builds/rigenera-app-linux-x64/ --arch amd64 --config debian.json",
+    "package-linux32": "electron-packager .  rigenera-app --overwrite --asar=true --platform=linux --arch=ia32 --icon=assets/icons/png/1024x1024.png --prune=true --out=release-builds",
+    "build32": "electron-packager . rigenera-app --overwrite --asar true --platform linux --arch ia32 --icon assets/icons/png/1024x1024.png --prune true --out release-builds/",
+    "deb32": "electron-installer-debian --src release-builds/rigenera-app-linux-ia32/ --arch i386 --config debian.json",
     "package:sign-exe": "signcode './out/Electron API Demos-win32-ia32/Electron API Demos.exe' --cert ~/electron-api-demos.p12 --prompt --name 'Electron API Demos' --url 'http://electron.atom.io'",
     "package:installer": "node ./script/installer.js",
     "package:sign-installer": "signcode './out/windows-installer/ElectronAPIDemosSetup.exe' --cert ~/electron-api-demos.p12 --prompt --name 'Electron API Demos' --url 'http://electron.atom.io'",
@@ -39,8 +41,9 @@
     "check-for-leaks": "^1.2.0",
     "devtron": "^1.3.0",
     "electron": "^1.8.6",
-    "electron-packager": "^8.6.0",
+    "electron-packager": "^9.0.0",
     "electron-winstaller": "^2.2.0",
+    "electron-installer-debian": "^0.8.1",
     "husky": "^0.14.3",
     "mocha": "^3.1.0",
     "npm-run-all": "^4.0.2",
