--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "rigenera-app",
   "productName": "Welcome Rigenera",
   "version": "1.3.1",
-  "description": "Electron interactive API demos",
+  "description": "Welcome app per installazioni di Rigenera Digitale Linux",
   "private": true,
   "main": "main.js",
   "scripts": {
